# transparencia-analytics

./: .env.example  ARCHITECTURE.md  Dockerfile  PLAN.md  Procfile  README.md  nixpacks.toml  pyproject.toml  railway.toml
db/migrations/: 001_initial_schema.sql  002_hnsw_index.sql  003_conversations.sql
src/transparencia/: __main__.py  cache.py  config.py  main.py
src/transparencia/api/routers/: contracts.py  conversations.py  health.py
src/transparencia/db/: connection.py
src/transparencia/ingest/: cron_refresh.py  embed_missing.py  flag_contracts.py  secop_pipeline.py  socrata.py
tests/: test_contracts_schema.py  test_health.py
